--- a/src/style.css/styles.css
+++ b/src/style.css/styles.css
@@ -1,20 +1,15 @@
-.weather-description {
-  font-size: 28px;
-  font-weight: 300;
-  padding: 0 auto;
-  margin: 0 auto;
+.unit {
+  font-size: 20px;
   position: relative;
-  top: -10px;
+  top: -26px;
+  margin-left: 5px;
 }
-
 h1 {
   font-size: 19px;
   font-weight: 300;
 }
 
-.middle-section {
-  margin-top: 15px;
-}
+
 
 hr {
   position: relative;
@@ -22,11 +17,7 @@ hr {
   margin-bottom: 0;
 }
 
-p {
-  width: 100%;
-  margin: 0 auto;
-  font-size: 30px;
-}
+
 
 .celsius,
 .fahrenheit {
