--- a/src/style.css/WeatherInfo.css
+++ b/src/style.css/WeatherInfo.css
@@ -12,18 +12,16 @@
 
 
 .weatherInfo .degrees {
+  font-size: 90px;
   display: inline-block;
   margin-right: 0;
   margin-bottom: 10px;
   margin-top: 10px;
-  font-size: 60px;
   margin: 0 auto;
 
 }
 
 .weatherInfo .degrees-celsius {
-  font-size: 70px;
-  font-weight: 300px;
   list-style: none;
   text-align: right;
   padding-top: 0px;
@@ -47,4 +45,18 @@
 
 .weatherInfo .middle-section {
   margin-top: 20px;
+}
+
+.humidity,
+.pressure,
+.wind {
+  font-size: 17px;
+  margin: 0 auto;
+}
+
+@media (max-width: 768px) {
+  .degrees {
+    position: relative;
+    top: 25px;
+  }
 }
