--- a/src/style.css/WeatherInfo.css
+++ b/src/style.css/WeatherInfo.css
@@ -30,6 +30,10 @@
   right: 25px;
 }
 
+.WeatherDetails {
+ position: relative;
+ top: -15px;
+}
 .weatherInfo ul {
   font-size: 13px;
   list-style: none;
